# VkPong

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  VulkanExtensions.cpp  VulkanExtensions.h  VulkanInitialization.cpp  VulkanInitialization.h
shaders/vertex/: shader.vert
src/: BufferInfo.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  VertexData.hpp  VulkanExtensions.cpp  VulkanExtensions.hpp  VulkanObjectCreation.cpp  VulkanObjectCreation.hpp  VulkanState.cpp  VulkanState.h  VulkanState.hpp  vulkanhpp_include.hpp
src/Game/: Game.cpp  Game.hpp  Renderer.cpp  Renderer.hpp
src/Game/GameObjects/: Ball.cpp  Ball.hpp  BallVertices.hpp  GameObject.cpp  GameObject.hpp  OpponentPaddle.cpp  OpponentPaddle.hpp  Paddle.cpp  Paddle.hpp  PlayerPaddle.cpp  PlayerPaddle.hpp
src/GameObjects/: Ball.cpp  Ball.hpp  BallVertices.hpp  GameObject.cpp  GameObject.hpp  OpponentPaddle.cpp  OpponentPaddle.hpp  Paddle.cpp  Paddle.hpp  PlayerPaddle.cpp  PlayerPaddle.hpp
src/Structs/: BufferInfo.hpp  Color.hpp  Direction.hpp  Position.hpp  VertexData.cpp  VertexData.hpp
src/Vulkan/: BufferInfo.cpp  BufferInfo.hpp  QueueInfo.hpp  VulkanExtensions.cpp  VulkanExtensions.hpp  VulkanState.cpp  VulkanState.hpp  vulkanhpp_include.hpp
src/Vulkan/VulkanObjectCreation/: BufferCreation.cpp  BufferCreation.hpp  CommandBufferCreation.hpp  CommandPoolCreation.hpp  DebugReportbackCreation.cpp  DebugReportbackCreation.hpp  FenceCreation.cpp  FenceCreation.hpp  GraphicsPipelineCreation.cpp  InstanceCreation.cpp  LogicalDeviceCreation.hpp  PhysicalDeviceCreation.hpp  RenderPassCreation.hpp  SemaphoreCreation.hpp  SurfaceCreation.hpp  SwapchainCreation.cpp  SwapchainCreation.hpp  VulkanObjectCreation.hpp
src/VulkanObjectCreation/: BufferCreation.cpp  BufferCreation.hpp  CommandBufferCreation.cpp  CommandBufferCreation.hpp  CommandPoolCreation.cpp  DebugReportbackCreation.cpp  FramebufferCreation.cpp  FramebufferCreation.hpp  GraphicsPipelineCreation.cpp  GraphicsPipelineCreation.hpp  GraphicsPipelineLayoutCreation.cpp  GraphicsPipelineLayoutCreation.hpp  ImageViewCreation.cpp  ImageViewCreation.hpp  InstanceCreation.cpp  InstanceCreation.hpp  LogicalDeviceCreation.cpp  PhysicalDeviceCreation.cpp  RenderPassCreation.cpp  SemaphoreCreation.cpp  SurfaceCreation.cpp  SurfaceCreation.hpp  SwapchainCreation.cpp  VulkanObjectCreation.hpp
